<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sakura_bg_fragment"
    android:orientation="vertical"
    android:padding="@dimen/layout_border_padding">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_margin"
        android:text="@string/prompt"
        android:textColor="@color/white"
        android:textSize="@dimen/sakura_h5_text_size" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sakura_node_item_margin_top"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/current_node_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/sakura_h5_text_size" />

        <tv.ismar.sakura.ui.widget.SakuraButton
            android:id="@+id/unbind_node"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginLeft="@dimen/layout_margin"
            android:background="@drawable/sakura_selector_button"
            android:gravity="center"
            android:nextFocusLeft="@id/unbind_node"
            android:singleLine="true"
            android:textSize="@dimen/textSize_normal" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/layout_margin"
        android:layout_marginTop="@dimen/layout_margin"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="@dimen/layout_margin"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/province"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/sakura_h5_text_size" />

            <TextView
                android:id="@+id/province_spinner"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:background="@drawable/selector_item_list"
                android:focusable="true"
                android:gravity="center"
                android:textSize="@dimen/sakura_h5_text_size"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/layout_margin"
            android:layout_marginRight="@dimen/layout_margin"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/isp"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/sakura_h5_text_size" />

            <TextView
                android:id="@+id/isp_spinner"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:background="@drawable/selector_item_list"
                android:focusable="true"
                android:gravity="center"
                android:textSize="@dimen/sakura_h5_text_size"
                />

        </LinearLayout>

        <tv.ismar.sakura.ui.widget.SakuraButton
            android:id="@+id/speed_test_btn"
            android:layout_width="0dp"
            android:layout_height="@dimen/sakura_node_testbutton_height"
            android:layout_weight="1"
            android:background="@drawable/sakura_selector_button"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/source_speed_test"
            android:textColor="#ffffff"
            android:textSize="@dimen/sakura_h1_text_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/layout_margin"
        android:background="@drawable/sakura_bg_result"
        android:orientation="vertical">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="@dimen/list_title_height"
            android:layout_marginLeft="@dimen/layout_margin"
            android:layout_marginRight="@dimen/layout_margin"
            android:layout_marginTop="@dimen/layout_margin"
            android:background="#d5d9e2"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/video_source"
                android:textColor="#8f8f8f"
                android:textSize="@dimen/sakura_h5_text_size" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/source_status"
                android:textColor="#8f8f8f"
                android:textSize="@dimen/sakura_h5_text_size" />
        </LinearLayout>

        <tv.ismar.sakura.ui.widget.SakuraListView
            android:id="@+id/node_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:divider="@drawable/sakura_divider"
            android:fastScrollEnabled="false"
            android:smoothScrollbar="false" />
    </LinearLayout>


</LinearLayout>