<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:gravity="center"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/sakura_background"
        >

    <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <LinearLayout
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="@dimen/sakura_launch_icon_margin_left"
                android:layout_marginRight="@dimen/sakura_launch_icon_margin_right"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

            <ImageView
                    android:focusableInTouchMode="true"
                    android:focusable="true"
                    android:clickable="true"
                    android:id="@+id/indicator_node_image"
                    android:layout_width="@dimen/sakura_launch_icon_width"
                    android:layout_height="@dimen/sakura_launch_icon_height"
                    android:src="@drawable/sakura_selector_indicator_node"
                    />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#ffffff"
                    android:layout_marginTop="20dp"
                    android:textSize="38sp"
                    android:text="@string/indicator_node"
                    />

        </LinearLayout>

        <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="@dimen/sakura_launch_icon_margin_left"
                android:layout_marginRight="@dimen/sakura_launch_icon_margin_right"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

            <ImageView
                    android:focusableInTouchMode="true"
                    android:focusable="true"
                    android:clickable="true"
                    android:id="@+id/indicator_feedback_image"
                    android:layout_width="@dimen/sakura_launch_icon_width"
                    android:layout_height="@dimen/sakura_launch_icon_height"
                    android:src="@drawable/sakura_selector_indicator_feedback"
                    />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#ffffff"
                    android:layout_marginTop="20dp"
                    android:textSize="38sp"
                    android:text="@string/indicator_feedback"
                    />

        </LinearLayout>


        <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="@dimen/sakura_launch_icon_margin_left"
                android:layout_marginRight="@dimen/sakura_launch_icon_margin_right"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

            <ImageView
                    android:focusableInTouchMode="true"
                    android:focusable="true"
                    android:clickable="true"
                    android:id="@+id/indicator_help_image"
                    android:layout_width="@dimen/sakura_launch_icon_width"
                    android:layout_height="@dimen/sakura_launch_icon_height"
                    android:src="@drawable/sakura_selector_indicator_help"
                    />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#ffffff"
                    android:layout_marginTop="20dp"
                    android:textSize="38sp"
                    android:text="@string/indicator_help"
                    />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>