<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="@dimen/layout_border_padding"
        >
    <ImageView
        android:focusable="true"
        android:id="@+id/tmp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
            android:layout_marginLeft="@dimen/feedback_layout_h_margin"
            android:layout_marginRight="@dimen/feedback_layout_h_margin"
            android:layout_marginTop="@dimen/feedback_layout_v_margin"
            android:layout_marginBottom="@dimen/feedback_layout_v_margin"
            android:id="@+id/sn_code"
            android:text="您的设备SN号："
            android:textSize="@dimen/sakura_h5_text_size"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            />


    <RadioGroup
            android:layout_marginLeft="@dimen/feedback_layout_h_margin"
            android:layout_marginRight="@dimen/feedback_layout_h_margin"
            android:layout_marginTop="@dimen/feedback_layout_v_margin"
            android:layout_marginBottom="@dimen/feedback_layout_v_margin"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/problem_options"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_margin="@dimen/layout_margin"
            >

    </RadioGroup>

    <LinearLayout
            android:layout_marginLeft="@dimen/feedback_layout_h_margin"
            android:layout_marginRight="@dimen/feedback_layout_h_margin"
            android:layout_marginTop="@dimen/feedback_layout_v_margin"
            android:layout_marginBottom="@dimen/feedback_layout_v_margin"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:id="@+id/contact_area"
            android:layout_height="0dp"
            android:layout_weight="1"
            >

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sakura_h5_text_size"
                android:text="@string/contact_phone_number"/>

        <tv.ismar.helperpage.ui.widget.SakuraEditText
                style="@style/AppTheme.Widget.EditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/sakura_h5_text_size"
                android:gravity="center"
                android:id="@+id/phone_number_edit"
                android:inputType="phone"
                 android:maxLength="12"
                android:background="@drawable/sakura_selector_edit"/>
    </LinearLayout>


    <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:id="@+id/description_area"
            android:layout_marginLeft="@dimen/feedback_layout_h_margin"
            android:layout_marginRight="@dimen/feedback_layout_h_margin"
            android:layout_marginTop="@dimen/feedback_layout_v_margin"
            android:layout_marginBottom="@dimen/feedback_layout_v_margin"
            android:layout_height="0dp"
            android:layout_weight="1"
            >

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sakura_h5_text_size"
                android:text="@string/add_description"/>

        <tv.ismar.helperpage.ui.widget.SakuraEditText
                style="@style/AppTheme.Widget.EditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/sakura_h5_text_size"
                android:maxLength="70"
                android:gravity="center"
                android:id="@+id/description_edit"
                android:hint="@string/max_msg_length"
                android:background="@drawable/sakura_selector_edit"
                android:inputType="textMultiLine"/>
    </LinearLayout>

    <tv.ismar.helperpage.ui.widget.MessageSubmitButton
            android:layout_marginLeft="@dimen/feedback_layout_h_margin"
            android:layout_marginRight="@dimen/feedback_layout_h_margin"
            android:layout_marginTop="@dimen/feedback_layout_v_margin"
            android:layout_marginBottom="@dimen/feedback_layout_v_margin"
            android:id="@+id/submit_btn"
            android:textSize="@dimen/sakura_h5_text_size"
            android:layout_gravity="center"
            android:textColor="#ffffff"
            android:text="@string/submit_text"
            android:background="@drawable/sakura_selector_button"
            android:layout_width="180dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            />

    <tv.ismar.helperpage.ui.widget.FeedBackListView
            android:layout_marginLeft="@dimen/feedback_layout_h_margin"
            android:layout_marginRight="@dimen/feedback_layout_h_margin"
            android:layout_marginTop="@dimen/feedback_layout_v_margin"
            android:layout_marginBottom="@dimen/feedback_layout_v_margin"
            android:id="@+id/feedback_list"
            android:focusable="false"
            android:clickable="false"
            android:divider="#00000000"
            android:scrollbars="none"
            android:dividerHeight="10dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            />


    <LinearLayout
            android:layout_marginLeft="@dimen/feedback_layout_h_margin"
            android:layout_marginRight="@dimen/feedback_layout_h_margin"
            android:id="@+id/arrow"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center">

        <ImageView
                android:layout_marginRight="20dp"
                android:clickable="true"
                android:focusable="true"
                android:id="@+id/arrow_up"
                android:nextFocusDown="@id/arrow_up"
                android:src="@drawable/sakura_selector_arrow_up"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <ImageView
                android:layout_marginLeft="20dp"
                android:clickable="true"
                android:focusable="true"
                android:id="@+id/arrow_down"
                android:nextFocusDown="@id/arrow_down"
                android:src="@drawable/sakura_selector_arrow_down"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

    </LinearLayout>


</LinearLayout>